# sketchthis

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: application.cpp  application.hpp  at_scope_exit.hpp  button.cpp  button.hpp  font.cpp  font.hpp  fps_ctl.cpp  fps_ctl.hpp  functors.hpp  menu_reactor.cpp  menu_reactor.hpp  misc.cpp  misc.hpp  reactor.cpp  reactor.hpp  renderer.cpp  renderer.hpp  sdl2.cpp  sdl2.hpp  sdl2_helpers.hpp  sdl2_ttf.cpp  sdl2_ttf.hpp  sketchthis.cpp  surface.cpp  surface.hpp  term.hpp  texture.cpp  texture.hpp  tlsm.hpp  tlsm_events.hpp  window.cpp  window.hpp
